fix: Normalize line-height for Schemdraw/SVG elements to resolve text alignment issues.

--- a/src/course_forge/templates/css/base.css
+++ b/src/course_forge/templates/css/base.css
@@ -1483,3 +1483,15 @@ th .download-link {
     width: 90%;
     margin: 0 auto;
 }
+
+.svg-graph,
+.schemdraw-plot-img {
+    line-height: normal !important;
+}
+
+.svg-graph svg,
+.schemdraw-plot-img svg,
+.svg-graph text,
+.schemdraw-plot-img text {
+    line-height: normal !important;
+}
